Really fix sidebar jump this time

--- a/static/search.less
+++ b/static/search.less
@@ -45,7 +45,7 @@
 			padding: 0;
 			position: relative;
 			bottom: 2px;
-			width: 40px;
+			width: 40%;
 			.placeholder(@gray);
 			&:focus{
 				outline:none;
